PR revisions and updates to fix broken styles in demos
Had to also include an import in preview.scss since the demo's are
inside a nested iFrame

--- a/assets/sass/protocol/components/_split.scss
+++ b/assets/sass/protocol/components/_split.scss
@@ -176,7 +176,7 @@
     .mzp-c-split-body {
         @include border-box;
         @include bidi(((float, left, right),));
-        padding: 0 ($h-grid-lg * 0.5);
+        padding: 0 calc($h-grid-lg * 0.5);
         width: 50%;
 
         .mzp-l-split-reversed & {
